NSD code put into a NsdHelper.kt class for ease of use. Makes things less cluttered if i use a class.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:text="Host"/>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnFind"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="find" />
