--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,23 +5,58 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/gradient_background">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Mafia Party Game"
-        android:textAlignment="center"/>
+        android:layout_marginTop="50dp"
+        android:fontFamily="@font/abril_fatface"
+        android:text="Mafia"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="80dp" />
 
-    <Button
-        android:id="@+id/btnHost"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Host"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/btnFind"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="find" />
+
+        <Button
+            android:id="@+id/btnHost"
+            android:layout_width="109dp"
+            android:layout_height="48dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="76dp"
+            android:layout_marginTop="290dp"
+            android:layout_marginEnd="39dp"
+            android:layout_marginBottom="234dp"
+            android:layout_toStartOf="@+id/btnFind"
+            android:background="@drawable/custom_button"
+            android:fontFamily="@font/abril_fatface"
+            android:text="Host"
+            android:textSize="30dp" />
+
+        <Button
+            android:id="@+id/btnFind"
+            android:layout_width="109dp"
+            android:layout_height="48dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="290dp"
+            android:layout_marginEnd="75dp"
+            android:layout_marginBottom="234dp"
+            android:background="@drawable/custom_button"
+            android:fontFamily="@font/abril_fatface"
+            android:text="find"
+            android:textSize="30dp" />
+    </RelativeLayout>
+
+
+
 </androidx.appcompat.widget.LinearLayoutCompat>
