--- a/app/src/main/res/layout/activity_host_lobby.xml
+++ b/app/src/main/res/layout/activity_host_lobby.xml
@@ -16,11 +16,13 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Create Game"/>
-    
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewLobby"
+        android:id="@+id/recyclerviewLobby"
         android:layout_width="match_parent"
-        android:layout_height="500dp"/>
+        android:layout_height="match_parent"
+        />
+
 
 
 
