can now view the available NSD broadcasted lobbies in a recycler view, but the recycler will not update if there is a change in the number of lobbies (mutableList). Must make the recycler dynamic.

--- a/app/src/main/res/layout/card_view_layout.xml
+++ b/app/src/main/res/layout/card_view_layout.xml
@@ -13,20 +13,16 @@
         android:orientation="horizontal"
         android:padding="5dp">
 
-        <ImageView
-            android:id="@+id/imageview"
-            android:layout_width="40dp"
-            android:layout_height="40dp" />
-
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/lobbyName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="15dp"
             android:text="Item"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            />
 
     </LinearLayout>
 
