--- a/app/src/main/res/layout/activity_host_lobby.xml
+++ b/app/src/main/res/layout/activity_host_lobby.xml
@@ -8,20 +8,23 @@
     android:orientation="vertical">
 
     <EditText
+        android:id="@+id/serverName"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:hint="Name"/>
+        android:hint="Name"
+        android:textAlignment="center"
+        android:layout_gravity="center"
+        android:layout_marginTop="55dp"/>
 
     <Button
+        android:id="@+id/createServer"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="Create Game"/>
+        android:text="Create Game"
+        android:layout_gravity="center"
+        android:layout_marginTop="25dp"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerviewLobby"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+
 
 
 
