Started working on: -click on the recycler view to get server data -then connect to the server -then change activity to the lobby activity

--- a/app/src/main/res/layout/card_view_layout.xml
+++ b/app/src/main/res/layout/card_view_layout.xml
@@ -8,15 +8,16 @@
     app:cardElevation="6dp">
 
     <LinearLayout
+            android:id="@+id/serverCard"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="horizontal"
         android:padding="5dp">
 
         <TextView
-            android:id="@+id/lobbyName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/serverName"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="15dp"
             android:text="Item"
